# al-ahadeeth

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
al_ahadeeth/: __init__.py
al_ahadeeth/api/: apps.py  urls.py
al_ahadeeth/api/tests/: __init__.py  test_views.py
al_ahadeeth/apps/home/: apps.py  models.py
al_ahadeeth/apps/home/tests/: __init__.py  test_models.py
al_ahadeeth/cms/: apps.py
al_ahadeeth/ui/: apps.py  urls.py  views.py
al_ahadeeth/ui/static/al_ahadeeth/: README.md
al_ahadeeth/ui/templates/al_ahadeeth/: base.html  index.html  search.html
al_ahadeeth/ui/templatetags/: app.py
al_ahadeeth/ui/tests/: __init__.py  test_views.py
