[tool.poetry]
name = "al-ahadeeth"
version = "0.1.0"
description = "A platform to publish Al-Ahadeeth"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "al_ahadeeth" }]
homepage = "https://github.com/Q-Complex/al-ahadeeth"
repository = "https://github.com/Q-Complex/al-ahadeeth"
documentation = "https://github.com/Q-Complex/al-ahadeeth"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = ">=3.16.0"
drf-restwind = ">=0.1.2"
wagtail = ">=7.0"
wagtail-tw-blocks = ">=0.3.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=6.0.0"
black = ">=25.1.0"
ruff = ">=0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
